# django_app

./: .env.template  Dockerfile  demo.py  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  queries.sql  requirements.txt
M_12_i18n_l10n/: README.md
M_13_DRF/: README.md
M_14_Docs/: README.md
M_15_queries/: README.md
M_16_logging/: README.md
M_17_import_export/: README.md
M_18_Django_Cache/: README.md
mysite/: db.sqlite3  log.txt  log.txt.1  log.txt.2  log.txt.3  requirements.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_rename_profiles_profile.py  0003_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: groups-fixture.json  orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_alter_order_delivery_address.py  0008_product_created_by.py  0009_remove_product_created_by.py  (+4 more)
(+50 files in other folders)
