[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Sergei Bystrov <seryibizkit@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
djangorestframework = "^3.14.0"
asgiref = "^3.7.2"
django-debug-toolbar = "^4.1.0"
django-filter = "^23.2"
drf-spectacular = "^0.26.3"
pillow = "^9.5.0"
sentry-sdk = "^1.26.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
